// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Component Styles match danger 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
  background-color: #f8d7da;
  border-color: #f5b4bb;
}

.c0 > a,
.c0 > a:hover {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > a,
.c0 > a:hover {
  color: #721c24;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: #721c24;
}

.c0 > hr {
  border-top-color: #721c24;
}

<div
  class="sc-AxjAm c0"
  role="alert"
/>
`;

exports[`Alert Component Styles match dark 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
  background-color: #d6d8d9;
  border-color: #abaeb1;
}

.c0 > a,
.c0 > a:hover {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > a,
.c0 > a:hover {
  color: #171a1d;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: #171a1d;
}

.c0 > hr {
  border-top-color: #171a1d;
}

<div
  class="sc-AxjAm c0"
  role="alert"
/>
`;

exports[`Alert Component Styles match info 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
  background-color: #d1ecf1;
  border-color: #a3d6de;
}

.c0 > a,
.c0 > a:hover {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > a,
.c0 > a:hover {
  color: #10707f;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: #10707f;
}

.c0 > hr {
  border-top-color: #10707f;
}

<div
  class="sc-AxjAm c0"
  role="alert"
/>
`;

exports[`Alert Component Styles match light 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
  background-color: #fefefe;
  border-color: #cccecf;
}

.c0 > a,
.c0 > a:hover {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > a,
.c0 > a:hover {
  color: #343a40;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: #343a40;
}

.c0 > hr {
  border-top-color: #343a40;
}

<div
  class="sc-AxjAm c0"
  role="alert"
/>
`;

exports[`Alert Component Styles match noRadius 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
  border-radius: 0;
}

.c0 > a,
.c0 > a:hover {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

<div
  class="sc-AxjAm c0"
  role="alert"
/>
`;

exports[`Alert Component Styles match pill 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
  border-radius: 10rem;
}

.c0 > a,
.c0 > a:hover {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

<div
  class="sc-AxjAm c0"
  role="alert"
/>
`;

exports[`Alert Component Styles match plain 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
}

.c0 > a,
.c0 > a:hover {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

<div
  class="sc-AxjAm c0"
  role="alert"
>
  Hello World
</div>
`;

exports[`Alert Component Styles match primary 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
  background-color: #cce5ff;
  border-color: #9cc9fb;
}

.c0 > a,
.c0 > a:hover {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > a,
.c0 > a:hover {
  color: #004085;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: #004085;
}

.c0 > hr {
  border-top-color: #004085;
}

<div
  class="sc-AxjAm c0"
  role="alert"
/>
`;

exports[`Alert Component Styles match secondary 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
}

.c0 > a,
.c0 > a:hover {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > a,
.c0 > a:hover {
  color: #383d41;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: #383d41;
}

.c0 > hr {
  border-top-color: #383d41;
}

<div
  class="sc-AxjAm c0"
  role="alert"
/>
`;

exports[`Alert Component Styles match success 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
  background-color: #d4edda;
  border-color: #72d889;
}

.c0 > a,
.c0 > a:hover {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > a,
.c0 > a:hover {
  color: #155724;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: #155724;
}

.c0 > hr {
  border-top-color: #155724;
}

<div
  class="sc-AxjAm c0"
  role="alert"
/>
`;

exports[`Alert Component Styles match warning 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
  background-color: #fff3cd;
  border-color: #f3da8d;
}

.c0 > a,
.c0 > a:hover {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > a,
.c0 > a:hover {
  color: #856404;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: #856404;
}

.c0 > hr {
  border-top-color: #856404;
}

<div
  class="sc-AxjAm c0"
  role="alert"
/>
`;
